-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.3.0
-
None
-
3
-
4563
it's supposed to expose a bug but have stayed there for two releases already, and the last comment about it is "not happened for many months" which is posted two years ago, it gave 28 bytes overhead for each ldlm_lock and extra computing overhead.
Anyway, I think we should simply disable it.