LU-1594 ldlm: disable LUSTRE_TRACKS_LOCK_EXP_REFS

Disable lock export refcount, it's supposed to expose bug(20498)
but we didn't see it for two years already, disable it will
save 28 bytes for each ldlm_lock and decrease compute overhead.

Signed-off-by: Liang Zhen <liang@whamcloud.com>
Change-Id: I385c5e9d5052eb14b23bbf27003bf499e5b51576
Reviewed-on: http://review.whamcloud.com/3260
Reviewed-by: Mike Pershin <tappro@whamcloud.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@whamcloud.com>
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>